Rename calculator from Mikran to Hasaan

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Mikran's Calculator</title>
+  <title>Hasaan's Calculator</title>
   <style>
     :root{
       --bg:#0b1020; --panel:rgba(255,255,255,0.04); --accent:#7afcff; --accent-2:#7b61ff; --glass:rgba(255,255,255,0.03);
@@ -68,7 +68,7 @@
       <div class="brand">
         <div class="logo">MM</div>
         <div>
-          <h1>Mikran's Calculator</h1>
+          <h1>Hasaan's Calculator</h1>
           <div class="sub">Precision, keyboard & touch ready</div>
         </div>
       </div>
